--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </path>
                 </svg>
                     
-                <h2 class="logo-text">AI</h2>
+                <h2 class="logo-text">Mammu-Pagli-AI</h2>
             </div>
             <button id="close-chatbot" class="material-symbols-rounded">
                 keyboard_arrow_down
