--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </path>
                 </svg>
                 <div class="message-text">
-                    Hey there 👋! <br> I'm a AI. How can I help you today?
+                    Hey there 👋! <br> I'm a AI. Created By Mukhtar, How can I help you today?
                 </div>
             </div>
 
